--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "sp": "./cli.js"
+    "sp": "cli.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "glob": "^7.1.6",
     "inquirer": "^7.3.3",
     "minimist": "^1.2.5"
   }
