--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "colors": "^1.4.0",
     "glob": "^7.1.6",
     "inquirer": "^7.3.3",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "moment": "^2.29.1"
   }
 }
