--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "inquirer": "^7.3.3",
     "minimist": "^1.2.5",
