--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "inquirer": "^7.3.3",
+    "jshint": "^2.12.0",
     "minimist": "^1.2.5",
     "moment": "^2.29.1"
   }
